--- a/Styles/main.css
+++ b/Styles/main.css
@@ -57,7 +57,8 @@ select {
 
 .App {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -90,7 +91,7 @@ select {
   background-color: rgba(0, 0, 0, 0.7);
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   display: none;
 }
 
@@ -248,6 +249,39 @@ select {
           justify-content: center;
 }
 
+.App .mobile-menu {
+  display: none;
+  width: 70vw;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: #ffffff;
+  z-index: 3;
+}
+
+.App .mobile-menu img {
+  margin: 1.5em 2.5em;
+}
+
+.App .mobile-menu ul {
+  list-style-type: none;
+  margin: 1em 2.5em;
+  padding: 0em;
+}
+
+.App .mobile-menu ul li {
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 1.2em;
+  font-family: "Kumbh Sans", sans-serif;
+  line-height: 2em;
+}
+
+.App .mobile-menu.active {
+  display: block;
+}
+
 /* Nav */
 nav {
   display: -webkit-box;
@@ -270,8 +304,12 @@ nav {
   border-bottom: 0.05em solid #d8d1d1;
 }
 
-nav img {
+nav .brand-logo {
   margin-right: 1em;
+}
+
+nav .menu-icon {
+  display: none;
 }
 
 nav ul {
@@ -339,7 +377,7 @@ nav .cart-user .cart-container .cart-icon-container .cart-count {
   border-radius: 0.25em;
   position: absolute;
   top: 0em;
-  right: 0.5em;
+  left: 0.5em;
 }
 
 nav .cart-user .cart-container .cart-icon-container .cart-count p {
@@ -506,15 +544,12 @@ nav .cart-user .cart-container .cart.non-empty .checkout-button-container {
           justify-content: center;
 }
 
-nav .cart-user .cart-container:hover .cart {
-  display: block;
-}
-
 nav .cart-user .cart-container.active .cart {
   display: block;
 }
 
 nav .cart-user .avatar {
+  margin: 0em 0.5em;
   height: 2.8em;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -592,6 +627,51 @@ nav .cart-user .avatar:hover {
       -ms-flex-pack: center;
           justify-content: center;
   width: 100%;
+  position: relative;
+}
+
+.main .left-container .product-images .image-focused .previous-icon {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 1em;
+  background-color: #ffffff;
+  width: 2em;
+  height: 2em;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 50%;
+}
+
+.main .left-container .product-images .image-focused .previous-icon img {
+  width: 0.6em;
+}
+
+.main .left-container .product-images .image-focused .previous-icon img:hover {
+  -webkit-filter: brightness(0) saturate(100%) invert(54%) sepia(47%) saturate(2112%) hue-rotate(347deg) brightness(102%) contrast(101%);
+          filter: brightness(0) saturate(100%) invert(54%) sepia(47%) saturate(2112%) hue-rotate(347deg) brightness(102%) contrast(101%);
+}
+
+.main .left-container .product-images .image-focused .next-icon {
+  display: none;
+  position: absolute;
+  top: 50%;
+  right: 1em;
+  background-color: #ffffff;
+  width: 2em;
+  height: 2em;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 50%;
+}
+
+.main .left-container .product-images .image-focused .next-icon img {
+  width: 0.6em;
+}
+
+.main .left-container .product-images .image-focused .next-icon img:hover {
+  -webkit-filter: brightness(0) saturate(100%) invert(54%) sepia(47%) saturate(2112%) hue-rotate(347deg) brightness(102%) contrast(101%);
+          filter: brightness(0) saturate(100%) invert(54%) sepia(47%) saturate(2112%) hue-rotate(347deg) brightness(102%) contrast(101%);
 }
 
 .main .left-container .product-images .image-focused img {
@@ -779,15 +859,19 @@ nav .cart-user .avatar:hover {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background-color: #ff7e1b;
   color: #ffffff;
   height: 3em;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  padding: 0em 4.5em;
+  width: 15em;
   border-radius: 00.5em;
   font-size: 0.75em;
+  margin-top: 1em;
   opacity: 1;
 }
 
@@ -805,5 +889,200 @@ nav .cart-user .avatar:hover {
 .main .right-container .product-description .button-group .add-to-cart-button p img {
   padding: 0;
   margin-right: 1em;
+}
+
+@media screen and (max-width: 1036px) {
+  .App {
+    width: 100%;
+  }
+  .App .container {
+    width: 100%;
+    min-height: 100vh;
+    display: block;
+  }
+  .App .app-overlay .modal-view {
+    display: none;
+  }
+  nav {
+    height: 5em;
+    border-bottom: none;
+  }
+  nav .brand-logo {
+    margin-left: 0.5em;
+  }
+  nav .menu-icon {
+    display: block;
+    margin: 0em 0.5em;
+  }
+  nav ul li {
+    display: none;
+  }
+  nav .cart-user .cart-container .cart {
+    width: 95vw;
+    max-width: 30em;
+    height: 16em;
+    position: fixed;
+    top: 6em;
+    margin: 5% auto;
+    left: 0;
+    right: 0;
+    z-index: 1;
+  }
+  .left-container {
+    width: 100%;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    display: block;
+  }
+  .right-container {
+    width: 100%;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    display: block;
+  }
+  .main {
+    width: 100%;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    display: block;
+    margin: 0em 0em;
+  }
+  .main .left-container .product-images {
+    padding: 0;
+  }
+  .main .left-container .product-images .image-container {
+    width: 100%;
+  }
+  .main .left-container .product-images .image-focused .previous-icon {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .main .left-container .product-images .image-focused .next-icon {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .main .left-container .product-images .image-focused img {
+    width: 70%;
+    border-radius: 0.55em;
+  }
+  .main .left-container .product-images .image-array {
+    display: none;
+  }
+  .main .right-container .product-description {
+    width: 100%;
+  }
+  .main .right-container .product-description .details {
+    font-size: 1em;
+  }
+  .main .right-container .product-description .button-group {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .main .right-container .product-description .button-group .quantity-button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 70%;
+    height: 3.5em;
+    font-size: 1em;
+    margin-right: 0em;
+  }
+  .main .right-container .product-description .button-group .quantity-button .subtract,
+  .main .right-container .product-description .button-group .quantity-button .add {
+    color: #ff7e1b;
+    width: 2.5em;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+  }
+  .main .right-container .product-description .button-group .quantity-button .subtract:hover,
+  .main .right-container .product-description .button-group .quantity-button .add:hover {
+    opacity: 0.7;
+  }
+  .main .right-container .product-description .button-group .quantity-button .quantity {
+    font-weight: 700;
+    -webkit-box-flex: 2;
+        -ms-flex: 2 1 auto;
+            flex: 2 1 auto;
+    width: 4.25em;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .main .right-container .product-description .button-group .add-to-cart-button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-size: 1em;
+    width: 70%;
+    height: 3.5em;
+    margin-top: 1em;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .main .left-container .product-images .image-focused img {
+    width: 80%;
+    border-radius: 0.55em;
+  }
+  .main .left-container .product-images .image-array {
+    display: none;
+  }
+  .main .right-container .product-description .button-group .quantity-button {
+    width: 100%;
+    height: 4em;
+  }
+  .main .right-container .product-description .button-group .add-to-cart-button {
+    width: 100%;
+    height: 4em;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .main .left-container .product-images .image-focused img {
+    width: 100%;
+    border-radius: 0em;
+  }
+  .main .left-container .product-images .image-array {
+    display: none;
+  }
 }
 /*# sourceMappingURL=main.css.map */
