--- a/Styles/main.scss
+++ b/Styles/main.scss
@@ -78,7 +78,8 @@ select {
 
 .App {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
+  position: relative;
   @include flexCenter();
   .container {
     width: 75%;
@@ -95,7 +96,7 @@ select {
     background-color: rgba($color: #000000, $alpha: 0.7);
     position: fixed;
     top: 0;
-    z-index: 1;
+    z-index: 2;
     display: none;
     .modal-view {
       width: 35%;
@@ -197,6 +198,34 @@ select {
   .app-overlay.active {
     @include flexCenter();
   }
+  .mobile-menu {
+    display: none;
+    width: 70vw;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: #ffffff;
+    z-index: 3;
+    img {
+      margin: 1.5em 2.5em;
+    }
+    ul {
+      list-style-type: none;
+      margin: 1em 2.5em;
+      padding: 0em;
+    }
+    ul li {
+      text-decoration: none;
+      font-weight: 700;
+      font-size: $font_size_medium;
+      font-family: $kumbh;
+      line-height: 2em;
+    }
+  }
+  .mobile-menu.active {
+    display: block;
+  }
 }
 
 /* Nav */
@@ -210,8 +239,11 @@ nav {
   padding: 0;
   margin: 0;
   border-bottom: 0.05em solid #d8d1d1;
-  img {
+  .brand-logo {
     margin-right: 1em;
+  }
+  .menu-icon {
+    display: none;
   }
   ul {
     margin: 0;
@@ -250,7 +282,7 @@ nav {
           border-radius: 0.25em;
           position: absolute;
           top: 0em;
-          right: 0.5em;
+          left: 0.5em;
           p {
             font-size: 0.5em;
             line-height: 0.5em;
@@ -357,14 +389,12 @@ nav {
       .cart.non-empty .checkout-button-container {
         @include flexCenter();
       }
-      &:hover .cart {
-        display: block;
-      }
     }
     .cart-container.active .cart {
       display: block;
     }
     .avatar {
+      margin: 0em 0.5em;
       height: 2.8em;
       box-sizing: border-box;
       border-radius: 50%;
@@ -408,6 +438,45 @@ nav {
       .image-focused {
         @include flexCenter();
         width: 100%;
+        position: relative;
+        .previous-icon {
+          display: none;
+          position: absolute;
+          top: 50%;
+          left: 1em;
+          background-color: #ffffff;
+          width: 2em;
+          height: 2em;
+          box-sizing: border-box;
+          border-radius: 50%;
+          img {
+            width: 0.6em;
+            &:hover {
+              filter: brightness(0) saturate(100%) invert(54%) sepia(47%)
+                saturate(2112%) hue-rotate(347deg) brightness(102%)
+                contrast(101%);
+            }
+          }
+        }
+        .next-icon {
+          display: none;
+          position: absolute;
+          top: 50%;
+          right: 1em;
+          background-color: #ffffff;
+          width: 2em;
+          height: 2em;
+          box-sizing: border-box;
+          border-radius: 50%;
+          img {
+            width: 0.6em;
+            &:hover {
+              filter: brightness(0) saturate(100%) invert(54%) sepia(47%)
+                saturate(2112%) hue-rotate(347deg) brightness(102%)
+                contrast(101%);
+            }
+          }
+        }
         img {
           width: 100%;
           border-radius: 0.55em;
@@ -523,13 +592,15 @@ nav {
         }
         .add-to-cart-button {
           display: inline-flex;
+          align-items: center;
+          justify-content: center;
           background-color: $orange;
           color: #ffffff;
           height: 3em;
-          width: fit-content;
-          padding: 0em 4.5em;
+          width: 15em;
           border-radius: 00.5em;
           font-size: $font_size_small;
+          margin-top: 1em;
           opacity: 1;
           &:hover {
             opacity: 0.7;
@@ -544,6 +615,192 @@ nav {
         .add-to-cart-button p img {
           padding: 0;
           margin-right: 1em;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1036px) {
+  $mobile_font_size_general: 1em;
+  .App {
+    width: 100%;
+    .container {
+      width: 100%;
+      min-height: 100vh;
+      display: block;
+    }
+    .app-overlay {
+      .modal-view {
+        display: none;
+      }
+    }
+  }
+
+  nav {
+    height: 5em;
+    border-bottom: none;
+    .brand-logo {
+      margin-left: 0.5em;
+    }
+    .menu-icon {
+      display: block;
+      margin: 0em 0.5em;
+    }
+    ul li {
+      display: none;
+    }
+    .cart-user {
+      .cart-container {
+        .cart {
+          width: 95vw;
+          max-width: 30em;
+          height: 16em;
+          position: fixed;
+          top: 6em;
+          margin: 5% auto;
+          left: 0;
+          right: 0;
+          z-index: 1;
+        }
+      }
+    }
+  }
+
+  .left-container {
+    width: 100%;
+    height: fit-content;
+    display: block;
+  }
+
+  .right-container {
+    width: 100%;
+    height: fit-content;
+    display: block;
+  }
+
+  .main {
+    width: 100%;
+    height: fit-content;
+    display: block;
+    margin: 0em 0em;
+    .left-container {
+      .product-images {
+        padding: 0;
+        .image-container {
+          width: 100%;
+        }
+        .image-focused {
+          .previous-icon {
+            @include flexCenter();
+          }
+          .next-icon {
+            @include flexCenter();
+          }
+          img {
+            width: 70%;
+            border-radius: 0.55em;
+          }
+        }
+        .image-array {
+          display: none;
+        }
+      }
+    }
+    .right-container {
+      .product-description {
+        width: 100%;
+        .details {
+          font-size: $mobile_font_size_general;
+        }
+        .button-group {
+          width: 100%;
+          display: flex;
+          flex-flow: column;
+          justify-content: center;
+          align-items: center;
+          .quantity-button {
+            display: flex;
+            width: 70%;
+            height: 3.5em;
+            font-size: $mobile_font_size_general;
+            margin-right: 0em;
+            .subtract,
+            .add {
+              color: $orange;
+              width: 2.5em;
+              display: flex;
+              justify-content: center;
+              flex: 1 1 auto;
+              &:hover {
+                opacity: 0.7;
+              }
+            }
+            .quantity {
+              font-weight: 700;
+              flex: 2 1 auto;
+              width: 4.25em;
+              display: flex;
+              justify-content: center;
+            }
+          }
+          .add-to-cart-button {
+            display: flex;
+            font-size: $mobile_font_size_general;
+            width: 70%;
+            height: 3.5em;
+            margin-top: 1em;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .main {
+    .left-container {
+      .product-images {
+        .image-focused {
+          img {
+            width: 80%;
+            border-radius: 0.55em;
+          }
+        }
+        .image-array {
+          display: none;
+        }
+      }
+    }
+    .right-container {
+      .product-description {
+        .button-group {
+          .quantity-button {
+            width: 100%;
+            height: 4em;
+          }
+          .add-to-cart-button {
+            width: 100%;
+            height: 4em;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .main {
+    .left-container {
+      .product-images {
+        .image-focused {
+          img {
+            width: 100%;
+            border-radius: 0em;
+          }
+        }
+        .image-array {
+          display: none;
         }
       }
     }
